force-app/main/default/objects/Day_Attendance__c/Day_Attendance__c.object-meta.xml
<CustomObject>
    <label>Day Attendance</label>
    <nameField>
        <displayFormat>ATT-{0000}</displayFormat>
        <label>Day Attendance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Day Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>