force-app/main/default/objects/Day_Attendance__c/fields/Distance_Adjustment_KM__c.field-meta.xml
<CustomField>
    <fullName>Distance_Adjustment_KM__c</fullName>
    <label>Distance Adjustment KM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>