force-app/main/default/objects/Day_Attendance__c/fields/Eligible_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Distance_KM__c</fullName>
    <label>Eligible Distance KM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>