force-app/main/default/objects/Day_Attendance__c/fields/End_Location__c.field-meta.xml
<CustomField>
    <fullName>End_Location__c</fullName>
    <label>End Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>