force-app/main/default/objects/Day_Attendance__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <label>Start Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>