force-app/main/default/objects/Day_Attendance__c/fields/Total_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_KM__c</fullName>
    <label>Total Distance KM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>