force-app/main/default/objects/Day_Attendance__c/fields/Travel_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Travel_Expense_Amount__c</fullName>
    <label>Travel Expense Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>